--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
-    "@types/validator": "^13.12.2"
+    "@types/validator": "^13.12.2",
+    "vitest": "^2.1.8"
   }
 }
