--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,34 +7,31 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "test": "vitest"
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@astrojs/markdown-remark": "^6.0.1",
-    "@astrojs/renderer-vue": "^0.4.0",
     "@astrojs/tailwind": "^5.1.3",
-    "@testing-library/jest-dom": "^6.0.1",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.5.3",
     "@types/toastify-js": "^1.12.3",
     "astro": "^5.1.0",
-    "eslint-plugin-jest-dom": "^5.0.1",
-    "eslint-plugin-testing-library": "^5.11.0",
-    "happy-dom": "^15.11.7",
-    "jest": "^29.6.2",
-    "jest-environment-jsdom": "^29.6.2",
     "nanostores": "^0.11.3",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.16",
     "toastify-js": "^1.12.0",
     "validator": "^13.12.0",
-    "vitest": "^2.1.8",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "@playwright/test": "^1.49.1",
+    "@astrojs/ts-plugin": "^1.10.4",
+    "@testing-library/dom": "^10.4.0",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.2",
-    "@types/validator": "^13.12.2"
+    "@types/validator": "^13.12.2",
+    "@vitest/ui": "^2.1.8",
+    "happy-dom": "^15.11.7",
+    "jsdom": "^25.0.1",
+    "vitest": "^2.1.8"
   }
 }
