--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,22 +1,11 @@
 {
   "extends": "astro/tsconfigs/strict",
-  // "extends": "astro/tsconfigs/base",
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"]
-    },
-    "types": ["vitest/globals"],
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "allowJs": true
+    }
   },
-  "include": ["src/**/*.ts", "src/**/*.astro"],
-  "exclude": ["node_modules"]
+  "include": [".astro/types.d.ts", "**/*"],
+  "exclude": ["dist"]
 }
