--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@astrojs/node": "^9.0.0",
     "@astrojs/tailwind": "^5.1.3",
     "@types/toastify-js": "^1.12.3",
+    "@vitest/coverage-v8": "^2.1.8",
     "astro": "^5.0.2",
     "nanostores": "^0.11.3",
     "socket.io": "^4.8.1",
@@ -32,6 +34,5 @@
     "@vitest/ui": "^2.1.8",
     "happy-dom": "^15.11.7",
     "jsdom": "^25.0.1",
-    "vitest": "^2.1.8"
-  }
+    "vitest": "^2.1.6"  }
 }
