--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,23 +7,24 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "coverage": "vitest run --coverage"
+    "test": "vitest run"
   },
   "dependencies": {
     "@astrojs/node": "^9.0.0",
+    "@astrojs/react": "^4.1.2",
     "@astrojs/tailwind": "^5.1.3",
     "@types/toastify-js": "^1.12.3",
-    "@vitest/coverage-v8": "^2.1.8",
-    "astro": "^5.0.2",
+    "astro": "^5.1.3",
     "nanostores": "^0.11.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^3.4.16",
     "toastify-js": "^1.12.0",
     "validator": "^13.12.0",
-    "zustand": "^5.0.2"
+    "zustand": "^5.0.2",
+    "vitest": "^3.0.0-beta.3"
   },
   "devDependencies": {
     "@astrojs/ts-plugin": "^1.10.4",
@@ -31,8 +32,9 @@
     "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.2",
     "@types/validator": "^13.12.2",
-    "@vitest/ui": "^2.1.8",
     "happy-dom": "^15.11.7",
     "jsdom": "^25.0.1",
-    "vitest": "^2.1.6"  }
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1"
+  }
 }
