--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,3 +1,4 @@
-DATABASE=
-USERNAMEDB=
-PASSWORD=
+JWT_SECRET=your_jwt_secret
+DATABASE=your_database
+USERNAMEDB=your_username
+PASSWORD=your_password
